limpieza comentarios movimientos.php

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 *.txt
 plantilla.php
 *.code-workspace
+comentarios.md
+*.md
+*.pdf
+
 
 # Created by https://www.toptal.com/developers/gitignore/api/macos,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,visualstudiocode
